# bsg

./: Cargo.toml
.cursor/rules/: general.mdc
src/: main.rs
src/core/: catalog.rs  events.rs  grid.rs  map.rs  mod.rs  tile.rs
src/gameplay/: mod.rs  piping.rs  placement.rs  rules.rs
src/input/: mod.rs
src/render/: mod.rs  overlay.rs  sync.rs  tilemaps.rs
