[package]
name = "space_game_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
